--- a/module/templates/ks/index.html
+++ b/module/templates/ks/index.html
@@ -1,1 +1,6 @@
-<h1>Hello world</h1>
+<head>
+	<link rel="stylesheet" href="static/css/main.css" type="text/css">
+</head>
+<body>
+	<h1 class="test">Hello world</h1>
+</body>
