--- a/module/templates/ks/index.html
+++ b/module/templates/ks/index.html
@@ -1,6 +1,104 @@
-<head>
-	<link rel="stylesheet" href="static/css/main.css" type="text/css">
-</head>
-<body>
-	<h1 class="test">Hello world</h1>
-</body>
+﻿<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Меблі від виробника - Канапа стиль - Головна - Львів</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/css/main.css">
+		<style>
+			.content p {
+				text-indent : 35px;
+				font-size : 12pt; 
+				margin-left:30px;
+				margin-right:30px;
+				text-align: justify;
+			}
+		</style>
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
+
+        <div class="container">
+			<div class="row">
+				<div class="span12 header-section cornered shadowed">
+					<h1>Меблі </h1>
+					<h2>від виробника</h2>
+					<img class="logo-main" src="/static/img/logo-main.png">
+					<img class="logo"src="/static/img/logo.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12 cornered search-section shadowed">
+					<div class="home-button"onClick="location='index.html'"></div>
+					<div class="material_link" onClick="location='material.html'"></div>
+					<div class="oplata_link" onClick="location='oplata.html'"></div>
+					<div class="kontakty_link" onClick="location='kontakty.html'"></div>
+					<form class="search" action="index.html">
+						<input type="text" class="search-query" placeholder="Пошук">
+					</form>
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12 menu-section cornered" style="margin-left:24px;">
+					<div class="menu-item soft-mebel-button" onClick="location='soft_mebli'"></div>
+					<div class="menu-item stoly-krisla-button" onClick="location='stoly-krisla.html'"></div>
+					<div class="menu-item kyhni-button"  onClick="location='kyhni.html'"></div>
+					<div class="menu-item spalni-button" onClick="location='spalni.html'"></div>
+					<div class="menu-item shafy-kupe-button" onClick="location='shafy-kupe.html'"></div>
+					<div class="menu-item shaluzi-button" onClick="location='shaluzi.html'"></div>
+					<div class="menu-item vorota-button" onClick="location='vorota.html'"></div>
+					<div class="menu-item gotovi-mebli-button"  onClick="location='gotovi-mebli.html'"></div>
+					<div class="menu-item kartyny-button" onClick="location='kartyny.html'"></div>
+				</div>
+			</div>
+            <div class="row">
+                <div class="span12 content cornered shadowed" style="padding-top:30px; padding-bottom:30px; font-family: Serif; color: #7c0d09; text-shadow: 1px 1px 1px yellow;">
+							<p> 
+								Багаторічний досвід та інноваційні розробки дають можливість запропонувати відмінні меблі на Ваш смак та гаманець! "Канапа Стиль" 
+								пропонує Вам лише високоякісну продукцію європейського рівня виробництва, широкий вибір сучасного та ретро дизайну моделей. Постійна 
+								розробка новітніх ідей, дизайнерських та конструкторських рішень гарантує Вам довговічність, якість та функціональність меблів. 
+								Тому вибираючи меблі компанії "Канапа Стиль", ми можемо з впевненістю сказати, що саме ці меблі ввібрали все найкраще: якісний текстиль та шкіру, тільки екологічно 
+								чисті й доброякісні матеріали, ортопедичні матраци, надійність кріплень та комплектуючих, які є великою рідкістю на 
+								вітчизняному ринку.
+							</p>
+							<p> 
+								За довгі роки нашої діяльності тисячі Львів'ян та жителів інших областей стали користувачами нашої 
+								продукції, адже ми пропонуємо виключно якісні та надійні меблі й дорожимо своїм іменем. Ви прагнете створити затишок 
+								та тепло у Вашій оселі? Ми з задоволенням допоможемо Вам у цьому. Звернувшись до нас Вас чекає індивідуальний 
+								підхід, висококваліфікована допомога у виборі меблів, з їх широкою кольоровою, структурною та текстурною палітрою, а 
+								продуманість конструкцій забезпечить легкість збірки меблів, їх монтажу в приміщеннях і зручність в 
+								експлуатації.
+							</p>
+							<p> 
+								Щира турбота про клієнтів та диференційований підхід надають Вам можливість скористатись виготовленням 
+								меблів за індивідуальними розмірами та дизайном. "Канапа Стиль" втілить найсміливіші дизайнерські ідеї за Вашим 
+								вибором, а виконання меблів за персональними розмірами дозволить Вам насолоджуватись домашнім затишком. Зверніться до 
+								нас і кваліфікований менеджер зніме розміри вашого приміщення, виконає індивідуальний дизайн, проконсультує у 
+								питаннях підбору матеріалів та комплектуючих.
+							</p>
+							<p> 
+								Компанія "Канапа Стиль" пропонує Вашій увазі постійне оновлення та збільшення асортименту своєї продукції 
+								з найоптимальнішим співвідношенням ціни та якості.
+							</p>
+				 <img src="img/baner.jpg" style="width: 880px; margin: 30px"> </div>
+            </div>
+            <div class="row">
+				<div class="span12 footer cornered shadowed"><div>&copy; kanapa-style 2013<div></div>
+            </div>
+        </div> 
+		
+        <script src="js/vendor/jquery-1.8.3.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>
+    </body>
+</html>
