KS: correct image handling

--- a/module/templates/ks/soft_mebli.html
+++ b/module/templates/ks/soft_mebli.html
@@ -79,39 +79,9 @@
 						</div>
 					</div>
 					<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery" data-selector="div.gallery-item">
-						<div class="gallery-item" data-href="/static/img/divanu/boston.jpg" title="Бостон"><img src="/static/img/divanu/small/boston.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/venesuela.jpg" title="Венесуелла"><img src="/static/img/divanu/small/venesuela.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/venecia.jpg" title="Венеція"><img src="/static/img/divanu/small/venecia.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/venecia_kutok.jpg" title="Куток Венеція"><img src="/static/img/divanu/small/venecia_kutok.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/hollywood.jpg" title="Голівуд"><img src="/static/img/divanu/small/hollywood.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/hollywood_2.jpg" title="Голівуд"><img src="/static/img/divanu/small/hollywood_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/hollywood_kutok_1.jpg" title="Престиж Куток"><img src="/static/img/divanu/small/hollywood_kutok_1.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/hollywood_kutok_2.jpg" title="Престиж Куток"><img src="/static/img/divanu/small/hollywood_kutok_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/hollywood_kutok_3.jpg" title="Престиж Куток"><img src="/static/img/divanu/small/hollywood_kutok_3.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/davud.jpg" title="Давид"><img src="/static/img/divanu/small/davud.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/komfort.jpg" title="Комфорт"><img src="/static/img/divanu/small/komfort.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/komfort_2.jpg" title="Комфорт"><img src="/static/img/divanu/small/komfort_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/kuzia.jpg" title="Кузя"><img src="/static/img/divanu/small/kuzia.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/kuzia_2.jpg" title="Кузя"><img src="/static/img/divanu/small/kuzia_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/kuzia_3.jpg" title="Кузя"><img src="/static/img/divanu/small/kuzia_3.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/maks.jpg" title="Макс"><img src="/static/img/divanu/small/maks.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/modern.jpg" title="Модерн"><img src="/static/img/divanu/small/modern.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/modern_2.jpg" title="Модерн"><img src="/static/img/divanu/small/modern_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/modern_3.jpg" title="Модерн"><img src="/static/img/divanu/small/modern_3.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/mustang.jpg" title="Мустанг"><img src="/static/img/divanu/small/mustang.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/mustang_2.jpg" title="Мустанг"><img src="/static/img/divanu/small/mustang_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/orlean.jpg" title="Орлеан"><img src="/static/img/divanu/small/orlean.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/paris.jpg" title="Париж"><img src="/static/img/divanu/small/paris.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/piton.jpg" title="Пітон"><img src="/static/img/divanu/small/piton.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/piton_2.jpg" title="Пітон"><img src="/static/img/divanu/small/piton_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/piton_3.jpg" title="Пітон"><img src="/static/img/divanu/small/piton_3.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/piton_kutok.jpg" title="Куток Пітон"><img src="/static/img/divanu/small/piton_kutok.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/prestige.jpg" title="Престиж"><img src="/static/img/divanu/small/prestige.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/retro_1.jpg" title="Ретро"><img src="/static/img/divanu/small/retro_1.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/retro_2.jpg" title="Ретро"><img src="/static/img/divanu/small/retro_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/rio_1.jpg" title="Ріо"><img src="/static/img/divanu/small/rio_1.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/rio_2.jpg" title="Ріо"><img src="/static/img/divanu/small/rio_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="/static/img/divanu/florence.jpg" title="Флоренція"><img src="/static/img/divanu/small/florence.jpg" style="width: 290px;"></div>
+						{% for divan in divans %}
+							<div class="gallery-item" data-href="{{ divan.url }}" title="{{ divan.name }}"><img src="{{ divan.small_url }}" style="width: 290px;"></div>
+						{% endfor %}
 					</div>
 				</div>
             </div>
