--- a/module/static/css/main.css
+++ b/module/static/css/main.css
@@ -11,6 +11,15 @@
 				box-shadow: 0 0 40px black;
 			}
 			
+			.gallery-item{
+				display: inline-block;
+				margin: 10px;
+				cursor: pointer;
+			}
+			.gallery-item:hover{
+				box-shadow: 0 0 20px black;
+			}
+			
 			.header-section{
 				height: 140px;
 				text-shadow: 3px 3px 4px black, 5px 5px 6px #ff7700;
@@ -53,6 +62,14 @@
 			.header-section .logo-main{
 				margin-top: -140px;
 				margin-left: 20px;
+			}
+			
+			.content p {
+				text-indent : 35px;
+				font-size : 12pt; 
+				margin-left:30px;
+				margin-right:30px;
+				text-align: justify;
 			}
 			
 			.search-section{
@@ -114,19 +131,6 @@
 				margin: -43px 0px 10px 690px;
 			}
 			
-			.home-button{
-				margin-left: 10px;
-				display: inline-block;
-				width:45px;
-				height:45px;
-				background-image: url(../img/home1.png);
-			}
-			
-			.home-button:hover{
-				background-image: url(../img/home2.png);
-				cursor: pointer;
-			}
-			
 			.material_link{
 				margin-left: 7px;
 				display: inline-block;
@@ -169,92 +173,102 @@
 			
 			.content{
 				min-height: 500px;
+				background: #fff6a6;
 			}
 			
+			.gallery-item{
+				display: inline-block;
+				margin: 10px;
+				cursor: pointer;
+			}
+			.gallery-item:hover{
+				box-shadow: 0 0 20px black;
+			}
 			.menu-item{
-				height: 100px;
-				width: 100px; 
+				background-image: url("../img/menu/menu_all_picture_buttons.png");
+				width: 108px;
+				height: 108px;
 				display:inline-block;
-				margin-top: 4px;
+				margin-left: 1px;
+				margin-right: 1px;
+			}
+			
+			.main-menu-item{
+				background-image: url("../img/menu/main_menu_all_buttons.png");
+				height: 60px;
+				display:inline-block;
+				margin-left: -4px;
+			}
+			
+			.main-menu-item:hover{
+				cursor: pointer;
+				background-position-y: -60px;
+			}
+			
+			a.main-selected{
+				background-position-y: -120px;
+			}
+			
+			a.main-selected:hover{
+				background-position-y: -120px;
+			}
+			
+			.home-button{
+				background-position: 0px 0px;
+				width: 266px;
+			}
+			
+			.oplata-button{
+				background-position: -266px 0px;
+				width: 318px;
+			}
+			
+			.kontakt-info-button{
+				background-position: -584px 0px;
+				width: 366px;
+			}
+			
+			.menu-item:hover{
+				background-position-y: -108px;
+				cursor: pointer;
+			}
+			
+			a.selected:hover{
+				background-position-y: -216px;
 			}
 			
 			.soft-mebel-button{
-				background-image: url(../img/1/11.png);
-			}
-			
-			.soft-mebel-button:hover{
-				background-image: url(../img/1/12.png);
-				cursor: pointer;
+				background-position: 0px 0px;
 			}
 			
 			.stoly-krisla-button{
-				background-image: url(../img/2/21.png);
-			}
-			
-			.stoly-krisla-button:hover{
-				background-image: url(../img/2/22.png);
-				cursor: pointer;
+				background-position: -324px 0px;
 			}
 			
 			.kyhni-button{
-				background-image: url(../img/3/31.png);
-			}
-			
-			.kyhni-button:hover{
-				background-image: url(../img/3/32.png);
-				cursor: pointer;
+				background-position: -108px 0px;
 			}
 			
 			.spalni-button{
-				background-image: url(../img/4/41.png);
-			}
-			
-			.spalni-button:hover{
-				background-image: url(../img/4/42.png);
-				cursor: pointer;
+				background-position: -432px 0px;
 			}
 			
 			.shafy-kupe-button{
-				background-image: url(../img/5/51.png);
-			}
-			
-			.shafy-kupe-button:hover{
-				background-image: url(../img/5/52.png);
-				cursor: pointer;
+				background-position: -216px 0px;
 			}
 			
 			.shaluzi-button{
-				background-image: url(../img/6/61.png);
-			}
-			
-			.shaluzi-button:hover{
-				background-image: url(../img/6/62.png);
-				cursor: pointer;
+				background-position: -540px 0px;
 			}
 			
 			.vorota-button{
-				background-image: url(../img/7/71.png);
-			}
-			
-			.vorota-button:hover{
-				background-image: url(../img/7/72.png);
-				cursor: pointer;
-			}
-			
-			.gotovi-mebli-button{
-				background-image: url(../img/8/81.png);
-			}
-			
-			.gotovi-mebli-button:hover{
-				background-image: url(../img/8/82.png);
-				cursor: pointer;
+				background-position: -756px 0px;
 			}
 			
 			.kartyny-button{
-				background-image: url(../img/9/91.png);
+				background-position: -648px 0px;
 			}
 			
-			.kartyny-button:hover{
-				background-image: url(../img/9/92.png);
-				cursor: pointer;
+			a.selected{
+				background-position-y: -216px;
 			}
