--- a/module/templates/ks/kartyny.html
+++ b/module/templates/ks/kartyny.html
@@ -1,106 +1,1 @@
-﻿<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Картини на замовлення - Канапа Стиль - Львів</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/bootstrap-image-gallery.css">
-        <link rel="stylesheet" href="css/main.css">
-		<style>
-			.gallery-item{
-				display: inline-block;
-				margin: 10px;
-				cursor: pointer;
-			}
-			.gallery-item:hover{
-				box-shadow: 0 0 20px black;
-			}
-			
-		</style>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-        <div class="container">
-			<div class="row">
-				<div class="span12 header-section cornered shadowed">
-					<h1>Меблі </h1>
-					<h2>від виробника</h2>
-					<img class="logo-main" src="img/logo-main.png">
-					<img class="logo"src="img/logo.png">
-				</div>
-			</div>
-			<div class="row">
-				<div class="span12 cornered search-section shadowed">
-					<div class="home-button"onClick="location='index.html'"></div>
-					<div class="material_link" onClick="location='material.html'"></div>
-					<div class="oplata_link" onClick="location='oplata.html'"></div>
-					<div class="kontakty_link" onClick="location='kontakty.html'"></div>
-					<form class="search" action="index.html">
-						<input type="text" class="search-query" placeholder="Пошук">
-					</form>
-				</div>
-			</div>
-			<div class="row">
-				<div class="span12 menu-section cornered" style="margin-left:24px;">
-					<div class="menu-item soft-mebel-button" onClick="location='soft-mebel.html'"></div>
-					<div class="menu-item stoly-krisla-button" onClick="location='stoly-krisla.html'"></div>
-					<div class="menu-item kyhni-button" onClick="location='kyhni.html'"></div>
-					<div class="menu-item spalni-button" onClick="location='spalni.html'"></div>
-					<div class="menu-item shafy-kupe-button" onClick="location='shafy-kupe.html'"></div>
-					<div class="menu-item shaluzi-button" onClick="location='shaluzi.html'"></div>
-					<div class="menu-item vorota-button" onClick="location='vorota.html'"></div>
-					<div class="menu-item gotovi-mebli-button" onClick="location='gotovi-mebli.html'"></div>
-					<div class="menu-item kartyny-button" style="background-image: url(img/9/93.png)" onClick="location='kartyny.html'"></div>
-				</div>
-			</div>
-            <div class="row">
-                <div class="span12 content cornered shadowed">
-					<!-- modal-gallery is the modal dialog used for the image gallery -->
-					<div id="modal-gallery" class="modal modal-gallery hide fade" tabindex="-1">
-						<div class="modal-header">
-							<a class="close" data-dismiss="modal">&times;</a>
-							<h3 class="modal-title"></h3>
-						</div>
-						<div class="modal-body"><div class="modal-image"></div></div>
-						<div class="modal-footer">
-							<a class="btn btn-info modal-prev"><i class="icon-arrow-left icon-white"></i> Попередній</a>
-							<a class="btn btn-primary modal-next">Наступний <i class="icon-arrow-right icon-white"></i></a>
-						</div>
-					</div>
-					<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery" data-selector="div.gallery-item">
-						<div class="gallery-item" data-href="img/kartunu/picture_1.jpg" title="001"><img src="img/kartunu/small/picture_1.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_2.jpg" title="002"><img src="img/kartunu/small/picture_2.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_3.jpg" title="003"><img src="img/kartunu/small/picture_3.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_4.jpg" title="004"><img src="img/kartunu/small/picture_4.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_5.jpg" title="005"><img src="img/kartunu/small/picture_5.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_6.jpg" title="006"><img src="img/kartunu/small/picture_6.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_7.jpg" title="007"><img src="img/kartunu/small/picture_7.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_8.jpg" title="008"><img src="img/kartunu/small/picture_8.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_9.jpg" title="009"><img src="img/kartunu/small/picture_9.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_10.jpg" title="010"><img src="img/kartunu/small/picture_10.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_11.jpg" title="011"><img src="img/kartunu/small/picture_11.jpg" style="width: 290px;"></div>
-						<div class="gallery-item" data-href="img/kartunu/picture_12.jpg" title="012"><img src="img/kartunu/small/picture_12.jpg" style="width: 290px;"></div>
-					</div>
-				</div>
-            </div>
-            <div class="row">
-				<div class="span12 footer cornered shadowed"><div>&copy; kanapa-style 2013<div></div>
-            </div>
-        </div> 
-
-        <script src="js/vendor/jquery-1.8.3.min.js"></script>
-        <script src="js/vendor/bootstrap.min.js"></script>
-		<script src="http://blueimp.github.com/JavaScript-Load-Image/load-image.min.js"></script>
-		<script src="js/vendor/bootstrap-image-gallery.js"></script>
-        <script src="js/main.js"></script>
-    </body>
-</html>
+﻿{% extends "ks/base.html" %}
