--- a/module/templates/ks/base.html
+++ b/module/templates/ks/base.html
@@ -18,7 +18,7 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="container" style="width: 1000px">
+        <div class="container">
 			<div class="row">
 				<div class="span12 header-section cornered shadowed">
 					<h1>Меблі </h1>
@@ -34,14 +34,14 @@
 			</div>
 			<div class="row">
 				<div class="span12 menu-section cornered" 		style="margin-left:34px; margin-top: -8px;">
-					<a class="menu-item soft-mebel-button" 		onClick="location='/ks/soft-mebel'"></a>
-					<a class="menu-item kyhni-button"			onClick="location='/ks/kyhni'"></a>
-					<a class="menu-item shafy-kupe-button" 		onClick="location='/ks/shafy-kupe'"></a>
-					<a class="menu-item stoly-krisla-button" 	onClick="location='/ks/stoly-krisla'"></a>
-					<a class="menu-item spalni-button" 			onClick="location='/ks/spalni'"></a>
-					<a class="menu-item shaluzi-button" 		onClick="location='/ks/shaluzi'"></a>
-					<a class="menu-item kartyny-button" 		onClick="location='/ks/kartyny'"></a>
-					<a class="menu-item vorota-button" 			onClick="location='/ks/vorota'"></a>
+					<a class="menu-item soft-mebel-button" 		href="/ks/soft-mebel?option=1"></a>
+					<a class="menu-item kyhni-button"			href="/ks/kyhni?option=1"></a>
+					<a class="menu-item shafy-kupe-button" 		href="/ks/shafy-kupe?option=1"></a>
+					<a class="menu-item stoly-krisla-button" 	href="/ks/stoly-krisla?option=1"></a>
+					<a class="menu-item spalni-button" 			href="/ks/spalni?option=1"></a>
+					<a class="menu-item shaluzi-button" 		href="/ks/shaluzi?option=1"></a>
+					<a class="menu-item kartyny-button" 		href="/ks/kartyny?option=1"></a>
+					<a class="menu-item vorota-button" 			href="/ks/vorota?option=1"></a>
 				</div>
 			</div>
             <div class="row">
