--- a/module/templates/ks/soft_mebli.html
+++ b/module/templates/ks/soft_mebli.html
@@ -1,4 +1,7 @@
 ﻿{% extends "ks/base.html" %}
+{% block header%}
+	<link rel="stylesheet" href="/static/css/sidebar.css">
+{% endblock%}
 {% block content%}
 	<div class="row">
 		<div class="span4 sidebar-menu">
