--- a/module/templates/ks/base.html
+++ b/module/templates/ks/base.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
         <link rel="stylesheet" href="/static/css/main.css">
         <script src="/static/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        {% block header %}{% endblock %}
     </head>
     <body style="background: #bdb062">
         <!--[if lt IE 7]>
@@ -34,18 +35,13 @@
 			</div>
 			<div class="row">
 				<div class="span12 menu-section cornered" 		style="margin-left:34px; margin-top: -8px;">
-					<a class="menu-item soft-mebel-button" 		href="/ks/soft-mebel?option=1"></a>
-					<a class="menu-item kyhni-button"			href="/ks/kyhni?option=1"></a>
-					<a class="menu-item shafy-kupe-button" 		href="/ks/shafy-kupe?option=1"></a>
-					<a class="menu-item stoly-krisla-button" 	href="/ks/stoly-krisla?option=1"></a>
-					<a class="menu-item spalni-button" 			href="/ks/spalni?option=1"></a>
-					<a class="menu-item shaluzi-button" 		href="/ks/shaluzi?option=1"></a>
-					<a class="menu-item kartyny-button" 		href="/ks/kartyny?option=1"></a>
-					<a class="menu-item vorota-button" 			href="/ks/vorota?option=1"></a>
+					{%for menu_item in menu%}
+						<a class="menu-item {{menu_item}}-button {%if menu_item == selected%} selected {%endif%}" 		href="/ks/{{menu_item}}?option=1"></a>
+					{%endfor%}
 				</div>
 			</div>
             <div class="row">
-                <div class="span12 content cornered shadowed" style="padding-top:30px; padding-bottom:30px; font-family: Serif; color: #7c0d09; text-shadow: 1px 1px 1px #7c651d;">
+                <div class="span12 content cornered shadowed" >
                 	{% block content %}{% endblock %}
                 </div>
             </div>
