--- a/module/templates/ks/soft_mebli.html
+++ b/module/templates/ks/soft_mebli.html
@@ -5,12 +5,9 @@
 {% block content%}
 	<div class="row">
 		<div class="span4 sidebar-menu">
-			<a class="sidebar-button-1" href="?option=1"></a>
-			<a class="sidebar-button-2" href="?option=2"></a>
-			<a class="sidebar-button-3" href="?option=3"></a>
-			<a class="sidebar-button-4" href="?option=4"></a>
-			<a class="sidebar-button-5" href="?option=5"></a>
-			<a class="sidebar-button-6" href="?option=6"></a>
+			{%for opt in options%}
+			<a class="sidebar-button-{{opt}} {%if opt == option%} active {%endif%}" href="?option={{opt}}"></a>
+			{%endfor%}
 		</div>
 		<div class="span8">
 			<!-- modal-gallery is the modal dialog used for the image gallery -->
