--- a/module/templates/ks/stoly-krisla.html
+++ b/module/templates/ks/stoly-krisla.html
@@ -1,1 +1,5 @@
-﻿{% extends "ks/base.html" %}
+﻿{% extends "ks/base_gallery.html" %}
+{% block header%}
+	<link rel="stylesheet" href="/static/css/sidebar.css">
+	<link rel="stylesheet" href="/static/css/stolu.css">
+{% endblock%}
