KS: social buttons added

--- a/module/templates/ks/base.html
+++ b/module/templates/ks/base.html
@@ -21,11 +21,12 @@
 
         <div class="container">
 			<div class="row">
-				<div class="span12 header-section cornered shadowed">
-					<h1>Меблі </h1>
-					<h2>від виробника</h2>
-					<img class="logo-main" src="/static/img/logo-main.png">
-					<img class="logo"src="/static/img/logo.png">
+				<div class="span12 header-section">
+					<div class="social">
+						<a class="social-icon vk" 		href="#"></a>
+						<a class="social-icon facebook" href="#"></a>
+						<a class="social-icon skype" 	href="#"></a>
+					</div>
 				</div>
 			</div>
 			<div class="row" style="display: inline-block; margin-left: -2px; padding 0px;">
