KS: more small changes

--- a/module/templates/ks/base.html
+++ b/module/templates/ks/base.html
@@ -47,9 +47,7 @@
                 </div>
             </div>
             <div class="row">
-				<div class="span12 footer cornered shadowed">
-					<div>&copy; kanapa-style 2013</div>
-				</div>
+				<div class="span12 footer"></div>
             </div>
         </div> 
 		
