--- a/module/templates/ks/index.html
+++ b/module/templates/ks/index.html
@@ -1,4 +1,7 @@
 ﻿{% extends "ks/base.html" %}
+{% block header%}
+	<link rel="stylesheet" href="/static/css/index.css">
+{% endblock%}
 {% block content%}
 	<p> 
 		Багаторічний досвід та інноваційні розробки дають можливість запропонувати відмінні меблі на Ваш смак та гаманець! "Канапа Стиль" 
