--- a/module/static/css/main.css
+++ b/module/static/css/main.css
@@ -135,26 +135,10 @@
 			}
 			
 			.footer{
-				margin-top: 3px;
-				height: 60px;
-				text-shadow: 3px 3px 4px black, 5px 5px 6px #ff7700;
-				color: #7c0d09;
-				font-family: Serif;
-				text-transform: uppercase;
-				background-image: linear-gradient(top, rgb(252,238,109) 49%, rgb(240,240,183) 0%, rgb(230,143,14) 88%);
-				background-image: -o-linear-gradient(top, rgb(252,238,109) 49%, rgb(240,240,183) 0%, rgb(230,143,14) 88%);
-				background-image: -moz-linear-gradient(top, rgb(252,238,109) 49%, rgb(240,240,183) 0%, rgb(230,143,14) 88%);
-				background-image: -webkit-linear-gradient(top, rgb(252,238,109) 49%, rgb(240,240,183) 0%, rgb(230,143,14) 88%);
-				background-image: -ms-linear-gradient(top, rgb(252,238,109) 49%, rgb(240,240,183) 0%, rgb(230,143,14) 88%);
-
-				background-image: -webkit-gradient(
-					linear,
-					left top,
-					left bottom,
-					color-stop(0.49, rgb(252,238,109)),
-					color-stop(0, rgb(240,240,183)),
-					color-stop(0.88, rgb(230,143,14))
-				);
+				margin-left: 15px;
+				height: 70px;
+				width: 950px;
+				background-image: url(../img/menu/copyright.png);
 			}
 			
 			.footer div{
@@ -210,8 +194,6 @@
 			.content{
 				min-height: 300px;
 				background: #fff6a6;
-				padding-top:30px; 
-				padding-bottom:30px; 
 				font-family: Serif; 
 				color: #7c0d09; 
 				text-shadow: 1px 1px 1px #7c651d;
