--- a/module/templates/ks/404.html
+++ b/module/templates/ks/404.html
@@ -1,4 +1,5 @@
 ﻿{% extends "ks/base.html" %}
 {% block content%}
-	Дана сторінка на даний момент знаходиться на етапі розробки
+	<div style="margin: 20px;">Вибачте за тимчасові незручності<br/>
+	Дана сторінка на даний момент знаходиться на етапі розробки</div>
 {% endblock%}
