--- a/module/templates/ks/kontakty.html
+++ b/module/templates/ks/kontakty.html
@@ -1,1 +1,31 @@
 ﻿{% extends "ks/base.html" %}
+{% block content%}
+	<table style="margin: 60px;">
+		<tbody><tr>
+			<td><h6>E-mail:</h6></td>
+			<td>kanapa.style@gmail.com	</td>
+		</tr>
+		<tr>
+			<td style="vertical-align: top"><h6 style="margin: 0px; padding: 0px;">Тел:</h6></td>
+			<td>+38 (096) 74 24 111<br>
+				+38 (093) 489 50 50<br>
+				+38 (099) 434 22 00
+			</td>
+		</tr>
+		<tr>
+			<td><h6>Фактична адреса:</h6></td>
+			<td>Луганська, 1а</td>
+		</tr>
+		<tr>
+			<td><h6>Юридична адреса:</h6></td>
+			<td>Зелена, 238/4</td>
+		</tr>
+	</tbody></table>
+	<img src="static/img/foto.jpg" style="position:relative; margin-left: 450px; margin-top: -250px; height: 300px;">
+	<h2 style=" margin-left: 260px;
+				text-shadow: 2px 2px 3px black, 4px 4px 5px #ff7700;
+				color: #7c0d09;
+				font-family: Serif;
+				text-transform: uppercase;">Нас можна знайти тут:</h2>
+	<img src="static/img/map.png" style="margin-left:50px; margin-bottom:50px; margin-right:50px; margin-top:10px; height: 520px;">
+{% endblock%}
