--- a/module/templates/ks/base.html
+++ b/module/templates/ks/base.html
@@ -10,6 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/css/bootstrap-image-gallery.css">
         <link rel="stylesheet" href="/static/css/main.css">
         <script src="/static/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         {% block header %}{% endblock %}
@@ -30,14 +31,14 @@
 				</div>
 			</div>
 			<div class="row" style="display: inline-block; margin-left: -2px; padding 0px;">
-				<a class="main-menu-item home-button main-selected" onClick="location='/ks/'"></a>
-				<a class="main-menu-item oplata-button" onClick="location='/ks/oplata'"></a>
-				<a class="main-menu-item kontakt-info-button" href="/ks/kontakty"></a>
+				{%for main_menu_item in main_menu%}
+					<a class="main-menu-item {{main_menu_item}}-button {%if main_menu_item == selected%} main-selected {%endif%}" 		href="/{{main_menu_item}}?option=1"></a>
+				{%endfor%}
 			</div>
 			<div class="row">
 				<div class="span12 menu-section cornered" 		style="margin-left:34px; margin-top: -8px;">
 					{%for menu_item in menu%}
-						<a class="menu-item {{menu_item}}-button {%if menu_item == selected%} selected {%endif%}" 		href="/ks/{{menu_item}}?option=1"></a>
+						<a class="menu-item {{menu_item}}-button {%if menu_item == selected%} selected {%endif%}" 		href="/{{menu_item}}?option=1"></a>
 					{%endfor%}
 				</div>
 			</div>
