--- a/module/templates/ks/base.html
+++ b/module/templates/ks/base.html
@@ -24,9 +24,9 @@
 			<div class="row">
 				<div class="span12 header-section">
 					<div class="social">
-						<a class="social-icon vk" 		href="#"></a>
-						<a class="social-icon facebook" href="#"></a>
-						<a class="social-icon skype" 	href="#"></a>
+						<a class="social-icon vk" 		href="http://vk.com/kanapa_style"></a>
+						<a class="social-icon facebook" href="https://uk-ua.facebook.com/kanapa.style"></a>
+						<a class="social-icon skype" 	href="skype://kanapa.style"></a>
 					</div>
 				</div>
 			</div>
