--- a/module/templates/ks/index.html
+++ b/module/templates/ks/index.html
@@ -30,7 +30,7 @@
 		Компанія "Канапа Стиль" пропонує Вашій увазі постійне оновлення та збільшення асортименту своєї продукції 
 		з найоптимальнішим співвідношенням ціни та якості.
 	</p>
-	<img src="/static/img/baner.jpg" style="width: 880px; margin: 30px"> 
+	<img src="/static/img/baner.jpg" style="width: 880px; margin: 0 30px"> 
 {% endblock%}	
 
 
