--- a/module/static/css/main.css
+++ b/module/static/css/main.css
@@ -7,12 +7,12 @@
 			}
 			
 			.cornered{
-				-moz-border-radius: 15px;
-				border-radius: 15px;
+				-moz-border-radius: 10px;
+				border-radius: 10px;
 			}
 			
 			.shadowed{
-				box-shadow: 0 0 40px black;
+				box-shadow: 0 0 30px;
 			}
 			
 			.sidebar-menu a{
@@ -102,7 +102,7 @@
 			
 			.content p {
 				text-indent : 35px;
-				font-size : 12pt; 
+				font-size : 14pt; 
 				margin-left:30px;
 				margin-right:30px;
 				text-align: justify;
@@ -192,11 +192,10 @@
 			}
 			
 			.content{
-				min-height: 550px;
 				background: #fff6a6;
 				font-family: Serif; 
 				color: #7c0d09; 
-				text-shadow: 1px 1px 1px #7c651d;
+				text-shadow: 1px 0px 0px #7c651d;
 			}
 			
 			.gallery-item{
